# pyliblo

./: .gitignore  MANIFEST.in  README.md  genindex.html  index.html  justfile  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
doc/: conf.py  index.rst
doc/man/: dump_osc.scd  send_osc.scd
liblo/: __init__.pyi
src/: liblo.pxd  liblo.pyx
test/: test_liblo.py  test_version.py
